--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "danihidayatx/image-optimizer": "^2.1",
         "filament/filament": "^4.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
